--- a/src/Components/Styling/Head.css
+++ b/src/Components/Styling/Head.css
@@ -29,7 +29,7 @@
     border-bottom: 3px solid white;
   }
   
-  .navigation li {
+  .navigation  {
     list-style: none;
     text-decoration: none;
     font-size: 23px;
@@ -72,4 +72,9 @@
     max-height: 60px;
     width: auto;
   }
+
+  .categoriesBtn:hover {
+    cursor: pointer;
+  }
+  
   
