Add  src/App.jsx  src/Components/Cart.jsx src/Components/DropdownMenu.jsx src/Components/Head.jsx src/Components/Product.jsx  src/Components/Styling/DropdownMenu.css src/Components/Styling/Head.css

--- a/src/Components/Styling/Head.css
+++ b/src/Components/Styling/Head.css
@@ -73,7 +73,7 @@
     width: auto;
   }
 
-  .dropdown {
+  .menu {
     position: relative;
     display: inline-block;
   
@@ -89,7 +89,7 @@
     z-index: 1;
   }
   
-  .categoriesBtn:hover {
+  .dropdown-btn:hover {
     cursor: pointer;
   }
   
