--- a/src/Components/Styling/Head.css
+++ b/src/Components/Styling/Head.css
@@ -64,11 +64,24 @@
     cursor: pointer;
   }
 
+  .cart-quantity {
+    position: absolute;
+    color: black;
+    background-color: rgb(239, 240, 243);
+    left: 85%;
+    top: 5%;
+    transform: translate(-50%, -50%);
+    padding: 5px 10px;
+    border-radius: 100%;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
   .cartIcon{
     height: fit-content;
   }
 
-  img {
+ .cartIcon {
     max-height: 60px;
     width: auto;
   }
