--- a/src/Components/Styling/Product.css
+++ b/src/Components/Styling/Product.css
@@ -38,6 +38,7 @@
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.4);
     padding: 20px;
+    box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
   
   }
   
